element: check for invalid gstcontext's being provided to set_context

https://bugzilla.gnome.org/show_bug.cgi?id=771773